--- a/js/src/dapps/dappreg/Header/header.css
+++ b/js/src/dapps/dappreg/Header/header.css
@@ -16,7 +16,7 @@
 */
 
 .header {
-  background: #08f;
+  background: #44e;
   border-radius: 0 0 0.25em 0.25em;
   color: #fff;
   font-size: 0.75em;
