--- a/js/src/dapps/dappreg/ButtonBar/buttonBar.css
+++ b/js/src/dapps/dappreg/ButtonBar/buttonBar.css
@@ -19,27 +19,8 @@
   text-align: center;
   margin: 1em 0 0 0;
 
-  button {
-    background: #44e;
-    border: 4px solid #44e;
-    border-radius: 0.25em;
-    color: #fff;
-    cursor: pointer;
-    font-size: 1em;
-    margin: 1em 0.375em;
-    opacity: 0.85;
-    padding: 0.75em 2em;
-
-    &[disabled] {
-      opacity: 0.5;
-      cursor: default;
-      background: #aaa;
-      border-color: #aaa;
-    }
-
-    &.cancel, &.delete {
-      background: #e44;
-      border-color: #e44;
-    }
+  .cancel, .delete {
+    background: #e44;
+    border-color: #e44;
   }
 }
