--- a/js/src/dapps/dappreg/Modal/modal.css
+++ b/js/src/dapps/dappreg/Modal/modal.css
@@ -29,11 +29,21 @@
       background: #fff;
       border-radius: 0 0 0.25em 0.25em;
       margin: 0 auto;
-      max-width: 740px;
+      max-width: 780px;
       text-align: left;
 
       .content {
+        line-height: 1.5em;
         padding: 2em;
+
+        p {
+          margin: 0;
+          padding: 0;
+        }
+
+        p+p {
+          margin-top: 1em;
+        }
       }
 
       .footer {
@@ -59,4 +69,36 @@
     top: 0;
     z-index: 49;
   }
+}
+
+.account {
+  div {
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  img {
+    border-radius: 50%;
+    margin-right: 0.5em;
+  }
+
+  .address {
+    display: block;
+    color: #888;
+    font-size: 0.75em;
+    margin-top: -0.5em;
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+.heading {
+  color: #888;
+  font-size: 0.75em;
+}
+
+.light {
+  color: #888;
 }
