--- a/js/src/dapps/dappreg/Warning/warning.css
+++ b/js/src/dapps/dappreg/Warning/warning.css
@@ -20,6 +20,7 @@
   border-top-right-radius: 0.25em;
   bottom: 0;
   color: #fff;
+  cursor: pointer;
   font-size: 0.75em;
   left: 0;
   line-height: 1.5em;
