--- a/js/src/dapps/dappreg/Button/button.css
+++ b/js/src/dapps/dappreg/Button/button.css
@@ -17,7 +17,7 @@
 
 .button {
   background: #44e;
-  border: 4px solid #44e;
+  border: none;
   border-radius: 0.25em;
   color: #fff;
   cursor: pointer;
@@ -30,11 +30,9 @@
     opacity: 0.5;
     cursor: default;
     background: #aaa;
-    border-color: #aaa;
   }
 
   &[data-warning="true"] {
     background: #e44;
-    border-color: #e44;
   }
 }
