--- a/js/src/dapps/dappreg/Application/application.css
+++ b/js/src/dapps/dappreg/Application/application.css
@@ -30,3 +30,29 @@
   padding: 1.5em;
   text-align: left;
 }
+
+.footer {
+  font-size: 0.75em;
+  margin: 1em;
+  padding: 1.5em;
+  text-align: center;
+}
+
+.header {
+  background: #44e;
+  border-radius: 0 0 0.25em 0.25em;
+  color: #fff;
+  left: 0;
+  padding: 1em;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 25;
+}
+
+.loading {
+  text-align: center;
+  padding-top: 5em;
+  font-size: 2em;
+  color: #999;
+}
