--- a/js/src/modals/SMSVerification/GatherData/gatherData.css
+++ b/js/src/modals/SMSVerification/GatherData/gatherData.css
@@ -33,3 +33,15 @@
   margin-bottom: 0;
   margin-left: .5em;
 }
+
+.terms {
+  line-height: 1.3;
+  opacity: .7;
+}
+.terms ul {
+  padding-left: 1.5em;
+}
+.terms li {
+  margin-top: .2em;
+  margin-bottom: .2em;
+}
