--- a/js/src/views/Dapps/dapps.css
+++ b/js/src/views/Dapps/dapps.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: -0.125em;
+  position: relative;
 }
 
 .list+.list {
@@ -28,4 +29,15 @@
   padding: 0.125em;
   flex: 0 1 50%;
   box-sizing: border-box;
+}
+
+.overlay {
+  background: rgba(255, 255, 255, 0.75);
+  bottom: 0;
+  left: -0.25em;
+  position: absolute;
+  right: -0.25em;
+  top: 0;
+  z-index: 100;
+  padding: 1em;
 }
