--- a/js/src/views/Dapps/dapps.css
+++ b/js/src/views/Dapps/dapps.css
@@ -32,12 +32,12 @@
 }
 
 .overlay {
-  background: rgba(255, 255, 255, 0.75);
-  bottom: 0;
+  background: rgba(50, 50, 50, 0.85);
+  bottom: 0.5em;
   left: -0.25em;
   position: absolute;
   right: -0.25em;
-  top: 0;
+  top: -0.25em;
   z-index: 100;
   padding: 1em;
 }
