Better MethodDecoding contract detection #3454

--- a/js/src/ui/MethodDecoding/methodDecoding.css
+++ b/js/src/ui/MethodDecoding/methodDecoding.css
@@ -18,6 +18,12 @@
 .container {
 }
 
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .details,
 .gasDetails {
   color: #aaa;
@@ -72,4 +78,8 @@
 .identityicon {
   margin-bottom: -10px;
   margin-right: 0.5em;
+}
+
+.inputData {
+  word-break: break-all;
 }
