--- a/js/src/modals/SMSVerification/GatherData/gatherData.css
+++ b/js/src/modals/SMSVerification/GatherData/gatherData.css
@@ -37,11 +37,13 @@
 .terms {
   line-height: 1.3;
   opacity: .7;
-}
-.terms ul {
-  padding-left: 1.5em;
-}
-.terms li {
-  margin-top: .2em;
-  margin-bottom: .2em;
+
+  ul {
+    padding-left: 1.5em;
+  }
+
+  li {
+    margin-top: .2em;
+    margin-bottom: .2em;
+  }
 }
