--- a/js/src/modals/Transfer/transfer.css
+++ b/js/src/modals/Transfer/transfer.css
@@ -157,6 +157,7 @@
   border-radius: 0.5em;
   background: #f80;
   color: white;
+  font-size: 0.75em;
   padding: 0.75em;
   text-align: center;
 }
