--- a/js/src/views/Accounts/accounts.css
+++ b/js/src/views/Accounts/accounts.css
@@ -30,3 +30,25 @@
   right: 1em;
   top: 4em;
 }
+
+.loadings {
+  display: flex;
+  flex-wrap: wrap;
+
+  .loading {
+    flex: 0 1 50%;
+    width: 50%;
+    height: 150px;
+    display: flex;
+    padding: 0.25em;
+    box-sizing: border-box;
+
+    > div {
+      display: flex;
+      flex: 1;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+  }
+}
