--- a/js/src/dapps/index.ejs
+++ b/js/src/dapps/index.ejs
@@ -4,14 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="/parity-logo-black-no-text.png" type="image/png">
-    <title>Basic Token Deployment</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div id="container"></div>
     <script src="vendor.js"></script>
-    <script src="commons.js"></script>
-    <script src="/parity-utils/parity.js"></script>
-    <script src="basiccoin.js"></script>
+    <% if (!htmlWebpackPlugin.options.secure) { %>
+      <script src="/parity-utils/parity.js"></script>
+    <% } %>
   </body>
 </html>
