--- a/js/src/views/Signer/_layout.css
+++ b/js/src/views/Signer/_layout.css
@@ -15,35 +15,5 @@
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-@import '../../_layout.css';
-
-.container {
-  padding: 25px 0 15px;
-}
-
-.transactionDetails {
-  padding-right: $statusMargin;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.mainContainer {
-  position: relative;
-}
-
-.mainContainer:after {
-  clear: both;
-}
-
-.mainContainer > * {
-  vertical-align: middle;
-  min-height: 190px;
-}
-
-.inputs {
-  margin-right: 30px;
-  margin-left: 30px;
-  width: 180px;
-  position: relative;
-  top: -15px; /* due to material ui weird styling */
-}
+$statusWidth: 240px;
+$statusMargin: 280px;
