--- a/js/src/views/Signer/components/TransactionFinished/TransactionFinished.css
+++ b/js/src/views/Signer/components/TransactionFinished/TransactionFinished.css
@@ -14,6 +14,9 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
+
+@import '../../_layout.css';
+
 .container {
   padding: 25px 0 15px;
 }
@@ -28,9 +31,8 @@
 }
 
 .statusContainer {
-  width: 220px;
-  padding: 0 40px 0 40px;
-  /*border-left: 1px solid #aaa;*/
+  width: $statusWidth;
+  padding: 0;
   position: absolute;
   top: 0;
   right: 0;
@@ -38,7 +40,7 @@
 }
 
 .transactionDetails {
-  padding-right: 321px;
+  padding-right: $statusMargin;
   width: 100%;
   box-sizing: border-box;
 }
