--- a/js/src/views/Signer/components/TransactionPendingForm/TransactionPendingForm.css
+++ b/js/src/views/Signer/components/TransactionPendingForm/TransactionPendingForm.css
@@ -14,10 +14,12 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
+
+@import '../../_layout.css';
+
 .container {
-  width: 220px;
-  padding: 20px 40px 0 40px;
-  /*border-left: 1px solid #aaa;*/
+  width: $statusWidth;
+  padding: 20px 0 0 0;
   position: absolute;
   top: 0;
   right: 0;
