--- a/js/src/ui/ShortenedHash/shortenedHash.css
+++ b/js/src/ui/ShortenedHash/shortenedHash.css
@@ -16,22 +16,6 @@
 */
 
 .hash {
-  padding-top: 1em;
+  display: inline-block;
   word-break: break-all;
-}
-
-.confirm {
-  opacity: 0.5;
-}
-
-.progressbar {
-  margin: 0.5em 0 !important;
-  width: 30% !important;
-  min-width: 220px;
-  display: inline-block !important;
-  height: 0.75em !important;
-}
-
-.progressinfo {
-  text-align: center;
 }
