--- a/js/src/views/Wallet/wallet.css
+++ b/js/src/views/Wallet/wallet.css
@@ -15,3 +15,40 @@
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
 
+.details {
+  margin: 0;
+
+  display: flex;
+  flex-direction: row;
+
+  > * {
+    flex: 1;
+    margin: 0.125em;
+    height: auto;
+
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.detail {
+  font-size: 1.125em;
+  color: white;
+  margin: 0 0.375em;
+  line-height: 1.5em;
+
+  &:first-child {
+    margin-left: 0;
+  }
+}
+
+.eth:after {
+  content: 'ETH';
+  font-size: 0.75em;
+  margin-left: 0.125em;
+}
