--- a/js/src/ui/MethodDecoding/methodDecoding.css
+++ b/js/src/ui/MethodDecoding/methodDecoding.css
@@ -18,6 +18,16 @@
 .container {
 }
 
+.clickable {
+  border: 1px dashed rgba(255, 255, 255, 0.4);
+  padding: 0.1em 0.3em;
+  margin: 0.1em 0.1em;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 .loading {
   display: flex;
   align-items: center;
