--- a/js/src/views/Wallet/wallet.css
+++ b/js/src/views/Wallet/wallet.css
@@ -52,3 +52,47 @@
   font-size: 0.75em;
   margin-left: 0.125em;
 }
+
+.progressText {
+  text-align: center;
+  margin: 0.75em 0 0.25em;
+}
+
+.confirmed {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0.75em 0.5em 0;
+
+  > * {
+    // height: 32px;
+  }
+}
+
+.confirmations {
+  tr {
+    &:nth-child(even) {
+      background-color: initial;
+    }
+
+    &.light {
+      background-color: rgba(255, 255, 255, 0.04);
+    }
+
+    &.dark {
+      background-color: transparent;
+    }
+  }
+}
+
+.actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.accountItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
