--- a/js/src/dapps/index.ejs
+++ b/js/src/dapps/index.ejs
@@ -8,7 +8,7 @@
     <style>
       html, body, #container {
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         margin: 0;
         padding: 0;
         background: white;
