First draft of the MultiSig Wallet (#3700)
* Wallet Creation Modal #3282

* Name and description to Wallet #3282

* Add Wallet to the Account Page and Wallet Page #3282

* Fix Linting

* Crete MobX store for Transfer modal

* WIP Wallet Redux Store

* Basic Details for Wallet #3282

* Fixing linting

* Refactoring Transfer store for Wallet

* Working wallet init transfer #3282

* Optional gas in MethodDecoding + better input

* Show confirmations for Wallet #3282

* Order confirmations

* Method Decoding selections

* MultiSig txs and confirm pending #3282

* MultiSig Wallet Revoke #3282

* Confirmations and Txs Update #3282

* Feedback for Confirmations #3282

* Merging master fixes...

* Remove unused CSS

--- a/js/src/modals/CreateWallet/createWallet.css
+++ b/js/src/modals/CreateWallet/createWallet.css
@@ -14,59 +14,26 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
-.container {
-  position: relative;
+
+.address {
+  vertical-align: top;
+  display: inline-block;
 }
 
-.input input {
-  padding-left: 48px !important;
-  box-sizing: border-box;
-
-  &.small {
-    padding-left: 40px !important;
-  }
+.identityicon {
+  margin: -8px 0.5em;
 }
 
-.inputEmpty input {
-  padding-left: 0 !important;
-}
+.owner {
+  height: 40px;
+  color: lightgrey;
 
-.small {
-  .input input {
-    padding-left: 40px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .identityicon {
+    width: 24px;
+    height: 24px;
   }
-
-  .icon,
-  .iconDisabled {
-    img {
-      height: 24px;
-      width: 24px;
-    }
-  }
-}
-
-.icon,
-.iconDisabled {
-  position: absolute;
-  top: 35px;
-
-  &.noLabel {
-    top: 10px;
-  }
-
-  &.noCopy {
-    left: 5px;
-  }
-
-  &.noUnderline {
-    top: 0;
-  }
-}
-
-.icon {
-  left: 0;
-}
-
-.iconDisabled {
-  left: 24px;
 }
