Display Wallet Owners in Accounts list

--- a/js/src/views/Accounts/accounts.css
+++ b/js/src/views/Accounts/accounts.css
@@ -22,6 +22,12 @@
   left: 7em;
 }
 
+.owners {
+  margin-top: 1em;
+  display: flex;
+  margin-bottom: -0.5em;
+}
+
 .toolbar {
   position: relative;
 }
