--- a/js/src/modals/WalletSettings/walletSettings.css
+++ b/js/src/modals/WalletSettings/walletSettings.css
@@ -15,19 +15,49 @@
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-.wrapper {
-  display: inline-block;
-}
-
-.data {
-  flex: 1;
-  font-family: monospace;
-  padding: 0 0.5em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.container {
+.splitInput {
   display: flex;
+  flex-direction: row;
+
+  > * {
+    flex: 1;
+
+    margin: 0 0.25em;
+
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
+
+.change {
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 0.75em 1.75em;
+  margin-bottom: 1em;
+
+  &.add {
+    background-color: rgba(139, 195, 74, 0.5);
+  }
+
+  &.remove {
+    background-color: rgba(244, 67, 54, 0.5);
+  }
+
+  .label {
+    text-transform: uppercase;
+    margin-bottom: 0.5em;
+    margin-left: -1em;
+    font-size: 0.8em;
+  }
+}
+
+.eth:after {
+  content: 'ETH';
+  font-size: 0.75em;
+  margin-left: 0.125em;
+}
+
