--- a/js/src/ui/GasPriceEditor/gasPriceEditor.css
+++ b/js/src/ui/GasPriceEditor/gasPriceEditor.css
@@ -27,13 +27,18 @@
 
 .editColumn {
   flex: 35;
-  padding-eft: '1rem';
-  justify-ontent: 'space-around';
+  padding-left: 1em;
+  justify-ontent: space-around;
   padding-bottom: 12;
   display: flex;
   flex-wrap: wrap;
   position: relative;
   flex-direction: column;
+}
+
+.gasPriceDesc {
+  font-size: 0.75em;
+  opacity: 0.5;
 }
 
 .row {
