--- a/js/src/views/Address/address.css
+++ b/js/src/views/Address/address.css
@@ -14,37 +14,37 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
-.address {
-}
 
-.delete .hero {
-  padding-bottom: 1em;
-}
+.delete {
+  .hero {
+    padding-bottom: 1em;
+  }
 
-.delete .info {
-  display: inline-block;
-}
+  .info {
+    display: inline-block;
+  }
 
-.delete .icon {
-  display: inline-block;
-}
+  .icon {
+    display: inline-block;
+  }
 
-.delete .nameinfo {
-  display: inline-block;
-  text-align: left;
-}
+  .nameinfo {
+    display: inline-block;
+    text-align: left;
+  }
 
-.delete .header {
-  text-transform: uppercase;
-  font-size: 1.25em;
-  padding-bottom: 0.25em;
-}
+  .header {
+    text-transform: uppercase;
+    font-size: 1.25em;
+    padding-bottom: 0.25em;
+  }
 
-.delete .address {
-}
+  .address {
+  }
 
-.delete .description {
-  padding-top: 1em;
-  font-size: 0.75em;
-  color: #aaa;
+  .description {
+    padding-top: 1em;
+    font-size: 0.75em;
+    color: #aaa;
+  }
 }
