--- a/js/src/views/Addresses/addresses.css
+++ b/js/src/views/Addresses/addresses.css
@@ -14,8 +14,6 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
-.addresses {
-}
 
 .list {
   display: flex;
@@ -26,21 +24,21 @@
   flex: 0 1 50%;
   width: 50%;
   position: relative;
-}
 
-.address:nth-child(odd)>div {
-  padding-right: 0.5em !important;
-}
+  &:nth-child(odd)>div {
+    padding-right: 0.5em !important;
+  }
 
-.address:nth-child(even)>div {
-  padding-left: 0.5em !important;
+  &:nth-child(even)>div {
+    padding-left: 0.5em !important;
+  }
 }
 
 .empty {
   width: 100%;
   display: block;
-}
 
-.empty div {
-  color: #aaa;
+  div {
+    color: #aaa;
+  }
 }
