--- a/js/src/views/Signer/components/TransactionPending/TransactionPending.css
+++ b/js/src/views/Signer/components/TransactionPending/TransactionPending.css
@@ -19,13 +19,9 @@
 
 .container {
   display: flex;
-  padding: 1em 0 1em;
+  padding: 1.5em 1em 1.5em 0;
 
   & > * {
     vertical-align: middle;
   }
-}
-
-.container+.container {
-  padding-top: 2em;
 }
