Fix tab bar active style

--- a/js/src/views/Application/TabBar/tabBar.css
+++ b/js/src/views/Application/TabBar/tabBar.css
@@ -42,9 +42,12 @@
   }
 
   &.tabactive, &.tabactive:hover {
-    color: white !important;
     background: rgba(0, 0, 0, 0.25) !important;
     border-radius: 4px 4px 0 0;
+
+    * {
+      color: white !important;
+    }
   }
 }
 
