Allow editing of gasPrice & gas in Signer (#3777)
* Rework gas display (maintainable)

* Move GasPriceSelector to ui

* Allow opening of gas component (WIP)

* Merge

* Consistency

* Adjust for Signer display

* Set maximum height based on screen size

* Gas editor displays in-place

* Cleanups

* Merge

* Style fixes

* Fixup stash mishap (again)

* Add store test

* Allow edited values to refrect on the display

* Fix properties

* Adjust styling to show different rows

* git mv

* git mv

* Style fixes

* Style updates

* Pass gas & gasPrice with confirmation

* Fix build (case)

* Style fixes

* Basic GasPriceEditor smoketest

* manual move 1

* manual move 2

* manual move 1

* manual move 2

* NODE_ENV=test ace fix

* UI smoketests

* Style

* Format options via formatter

* Initial version

* Re-add even/odd class

* re-add gasLimit to embedded passing

* style

* Updated for passing gas & price to store

* Allow gas/price overrides when none available

* Fix slider value, pass as number

--- a/js/src/views/Signer/components/TransactionMainDetails/transactionMainDetails.css
+++ b/js/src/views/Signer/components/TransactionMainDetails/transactionMainDetails.css
@@ -17,15 +17,62 @@
 
 @import '../../_layout.css';
 
-.container {
-  display: flex;
-  padding: 1em 0 1em;
+.account {
+  text-align: center;
+}
 
-  & > * {
-    vertical-align: middle;
+.contractIcon {
+  background: #eee;
+  width: 50px !important;
+  height: 50px !important;
+  box-sizing: border-box;
+  border-radius: 50%;
+  padding: 13px;
+}
+
+.editButtonRow {
+  text-align: right;
+}
+
+.from {
+  display: inline-block;
+  width: 40%;
+  vertical-align: top;
+
+  img {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+  }
+
+  span {
+    display: block;
   }
 }
 
-.container+.container {
-  padding-top: 2em;
+.method {
+  display: inline-block;
+  width: 60%;
+  vertical-align: top;
+  line-height: 1em;
+}
+
+.tx {
+  position: relative;
+  text-align: center;
+  margin: 0 -75px;
+  width: 150px;
+  top: -20px;
+  white-space: nowrap;
+}
+
+.total {
+  font-size: 0.6em;
+  opacity: .5;
+}
+
+.transaction {
+  flex: 1;
+  overflow: auto;
 }
