--- a/js/src/views/Signer/containers/RequestsPage/requestsPage.css
+++ b/js/src/views/Signer/containers/RequestsPage/requestsPage.css
@@ -15,35 +15,12 @@
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
+.noRequestsMsg {
+  color: #aaa;
 }
 
-.editColumn {
-  flex: 35;
-  padding-left: 1em;
-  justify-ontent: space-around;
-  padding-bottom: 12;
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  flex-direction: column;
-}
-
-.gasPriceDesc {
-  font-size: 0.75em;
-  opacity: 0.5;
-}
-
-.graphColumn {
-  flex: 65;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  flex-direction: column;
+.request {
+  &:nth-child(odd) {
+    background: rgba(255, 255, 255, 0.04);
+  }
 }
