Fixes UI glitches along the way

--- a/js/src/views/WriteContract/writeContract.css
+++ b/js/src/views/WriteContract/writeContract.css
@@ -32,6 +32,10 @@
   flex: 1;
   flex-direction: row;
 
+  // Fallback for browsers not supporting `calc`
+  min-height: 90vh;
+  min-height: calc(100vh - 8em);
+
   > * {
     margin: 0;
 
