--- a/js/src/ui/NewAddressSelector/addressSelector.css
+++ b/js/src/ui/NewAddressSelector/addressSelector.css
@@ -31,8 +31,6 @@
   font-family: inherit;
   font-size: 2em;
 
-  display: none;
-
   &:focus {
     outline: none;
   }
@@ -46,35 +44,22 @@
   position: relative;
   top: 0;
   left: 0;
-  // height: 5em;
-  width: 100%;
-
-
-  transform-origin: 100% 0;
-  transition-property: height, width, top, left;
-  transition-duration: 0.5s;
-  transition-timing-function: cubic-bezier(0.7,0,0.3,1);
-
-  &.expanded {
-    height: 100vh;
-  }
 }
 
-.container {
-  position: relative;
+.overlay {
+  position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  width: 100%;
-  height: 5em;
-  background-color: rgba(0, 0, 0, 0);
+  width: 100vw;
+  height: 80px;
 
   transform-origin: 100% 0;
-  transition-property: height, width, top, background-color;
+  transition-property: height, width, top, left, background-color, z-index;
   transition-duration: 0.5s;
   transition-timing-function: cubic-bezier(0.7,0,0.3,1);
 
-  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.0);
+  z-index: -9999;
 
   display: flex;
 
@@ -83,22 +68,15 @@
   }
 
   &.expanded {
-    position: absolute;
-    width: 100%;
     height: 100vh;
 
-    z-index: 10000;
-
     background-color: rgba(0, 0, 0, 0.85);
+    z-index: 9999;
 
     .input {
       font-size: 3em;
       padding: 0.5em 2rem;
       display: block;
-    }
-
-    .inputAddress {
-      display: none;
     }
   }
 }
