--- a/js/src/ui/NewAddressSelector/addressSelector.css
+++ b/js/src/ui/NewAddressSelector/addressSelector.css
@@ -152,6 +152,10 @@
 
   background-color: rgba(255, 255, 255, 0.25);
 
+  &:focus {
+    background-color: rgba(255, 255, 255, 0.45);
+  }
+
   &:first-child {
     margin-top: 0;
   }
