--- a/js/src/ui/NewAddressSelector/addressSelector.css
+++ b/js/src/ui/NewAddressSelector/addressSelector.css
@@ -40,10 +40,30 @@
   }
 }
 
+.inputAddress {
+  position: relative;
+  top: -14px;
+
+  &:hover, *:hover {
+    cursor: pointer !important;
+  }
+}
+
 .main {
   position: relative;
-  top: 0;
+  top: 14px;
   left: 0;
+
+  outline: 1px dashed rgba(255, 255, 255, 0);
+
+  transition-property: outline, padding;
+  transition-duration: 0.25s;
+  transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+
+  &:focus {
+    outline: 1px dashed rgba(255, 255, 255, 0.5);
+    padding: 0 0.5em;
+  }
 }
 
 .closeIcon {
@@ -140,10 +160,6 @@
 
     margin: 1em 0;
   }
-}
-
-.inputAddress:hover {
-  cursor: pointer;
 }
 
 @keyframes copied {
