--- a/js/src/views/Status/components/Status/status.css
+++ b/js/src/views/Status/components/Status/status.css
@@ -20,12 +20,12 @@
 
 .row {
   margin: 0 -1em;
-}
 
-.row::after {
-  display: table;
-  clear: both;
-  content: '';
+  &::after {
+    display: table;
+    clear: both;
+    content: '';
+  }
 }
 
 .blockInfo {
@@ -44,7 +44,7 @@
 }
 
 .col,
-.col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12 {
+.col3, .col4_5, .col6, .col12 {
   float: left;
   padding: 0 1em;
   box-sizing: border-box;
@@ -57,18 +57,11 @@
   width: calc(100% / 12 * 3);
 }
 
-.col4 {
-  width: 33.33333%;
-  width: -webkit-calc(100% / 12 * 4);
-  width: -moz-calc(100% / 12 * 4);
-  width: calc(100% / 12 * 4);
-}
-
-.col5 {
-  width: 41.66665%;
-  width: -webkit-calc(100% / 12 * 5);
-  width: -moz-calc(100% / 12 * 5);
-  width: calc(100% / 12 * 5);
+.col4_5 {
+  width: 37.5%;
+  width: -webkit-calc(100% / 12 * 4.5);
+  width: -moz-calc(100% / 12 * 4.5);
+  width: calc(100% / 12 * 4.5);
 }
 
 .col6 {
