--- a/js/src/ui/Form/AddressSelect/addressSelect.css
+++ b/js/src/ui/Form/AddressSelect/addressSelect.css
@@ -1,4 +1,4 @@
-/* Copyright 2015, 2016 Ethcore (UK) Ltd.
+/* Copyright 2015, 2016 Parity Technologies (UK) Ltd.
 /* This file is part of Parity.
 /*
 /* Parity is free software: you can redistribute it and/or modify
@@ -14,53 +14,242 @@
 /* You should have received a copy of the GNU General Public License
 /* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 */
-.account {
-  padding: 0.25em 0;
-  display: flex;
-  align-items: center;
-}
 
-.name {
-  height: 32px;
-  line-height: 32px;
-  display: inline-block;
-  vertical-align: top;
-  text-transform: uppercase;
-  padding: 0 0 0 1em;
-}
+.input {
+  box-sizing: border-box;
+  appearance: textfield;
+  width: 100%;
+  padding: 0;
+  border: none;
+  background: transparent;
 
-.balance {
-  color: #aaa;
-  padding-left: 1em;
-}
+  transition-property: font-size, padding;
+  transition-duration: 0.5s;
+  transition-timing-function: cubic-bezier(0.7,0,0.3,1);
 
-.image {
-  display: inline-block;
-  height: 32px;
-  width: 32px;
-  margin: 0;
-  z-index: 10;
-}
+  color: white;
+  font-family: inherit;
+  font-size: 2em;
 
-.icon {
-  position: absolute;
-  left: 0;
-  top: 35px;
+  &:focus {
+    outline: none;
+  }
 
-  &.noLabel {
-    top: 11px;
+  &::placeholder {
+    color: #a2a2a2;
   }
 }
 
-.paddedInput input {
-  padding-left: 46px !important;
+.parityBackground {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.25;
+  z-index: -1;
 }
 
-.container {
+.inputAddress {
   position: relative;
+  top: -14px;
+
+  &:hover, *:hover {
+    cursor: pointer !important;
+  }
 }
 
-.menuItem {
-  min-height: 0 !important;
-  line-height: inherit !important;
+.main {
+  position: relative;
+  top: 14px;
+  left: 0;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.closeIcon {
+  position: absolute;
+  top: 1rem;
+  right: 2rem;
+  font-size: 4em;
+
+  height: 48px;
+  width: 48px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 80px;
+
+  transform-origin: 100% 0;
+  transition-property: height, width, top, left, background-color, z-index;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
+
+  background-color: rgba(0, 0, 0, 0.0);
+  z-index: -9999;
+
+  display: flex;
+
+  * {
+    min-width: 0;
+  }
+
+  &.expanded {
+    height: 100vh;
+
+    background-color: rgba(0, 0, 0, 0.85);
+    z-index: 9999;
+
+    .input {
+      font-size: 3em;
+      padding: 0.5em 2rem;
+      display: block;
+
+      padding-right: 6rem;
+    }
+  }
+}
+
+.empty {
+  font-size: 1.5em;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.categories {
+  flex: 1;
+
+  display: flex;
+  flex-direction: row;
+
+  margin: 2rem 2rem 0;
+
+  > * {
+    flex: 1;
+  }
+}
+
+.category {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0.5em;
+
+  .title {
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-color: white;
+  }
+
+  .cards {
+    flex: 1;
+    overflow: auto;
+
+    display: flex;
+    flex-direction: column;
+
+    margin: 1em 0;
+  }
+}
+
+@keyframes copied {
+  from {
+    transform: scale(0.99);
+  }
+
+  50% {
+    transform: scale(0.97);
+  }
+
+  to {
+    transform: scale(0.99);
+  }
+}
+
+.account {
+  padding: 1em;
+  margin: 0.5em 0;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  background-color: rgba(255, 255, 255, 0.25);
+
+  transition: transform ease-out 0.1s;
+  transform: scale(1);
+
+  &.copied {
+    animation-duration: 0.25s;
+    animation-name: copied;
+  }
+
+  &:focus {
+    transform: scale(0.99);
+    background-color: rgba(255, 255, 255, 0.45);
+  }
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.35);
+  }
+}
+
+.accountInfo {
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 0;
+
+  > * {
+    padding: 0.25em 0;
+  }
+
+  .address {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 0.9em;
+
+    &:hover {
+      cursor: text;
+    }
+  }
+
+  .accountName {
+    font-weight: 700 !important;
+  }
+
+}
+
+.balance {
+  .value {}
+
+  .tag {
+    margin-left: 0.5em;
+    font-size: 0.85em;
+  }
 }
