--- a/js/src/ui/Form/AddressSelect/addressSelect.css
+++ b/js/src/ui/Form/AddressSelect/addressSelect.css
@@ -133,6 +133,7 @@
 
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
 
   margin: 2rem 2rem 0;
 
@@ -145,6 +146,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 0.5em;
+  max-width: 35em;
 
   .title {
     text-transform: uppercase;
