--- a/js/src/ui/Form/AddressSelect/addressSelect.css
+++ b/js/src/ui/Form/AddressSelect/addressSelect.css
@@ -69,8 +69,8 @@
 
 .closeIcon {
   position: absolute;
-  top: 1rem;
-  right: 2rem;
+  top: 0.5rem;
+  right: 1rem;
   font-size: 4em;
 
   height: 48px;
@@ -88,7 +88,7 @@
 
 .underline {
   position: relative;
-  margin: 0 2rem;
+  margin: 0 9rem 0 2rem;
 }
 
 .overlay {
@@ -120,7 +120,7 @@
 
     .input {
       font-size: 3em;
-      padding: 0 2rem 0.5em;
+      padding: 0 9rem 0.5em 2rem;
       display: block;
 
       padding-right: 6rem;
