--- a/js/src/views/WriteContract/writeContract.css
+++ b/js/src/views/WriteContract/writeContract.css
@@ -87,6 +87,7 @@
   display: flex;
   flex-direction: column;
   margin-right: 0.5em;
+  overflow: auto;
 
   .panel {
     background-color: rgba(0, 0, 0, 0.5);
