Fix Secure API hangs (#3927)
* Use proxy for WS in dev

* Update SecureAPI

* Update webpack config

* Fix dev contract

* Update webpack

* Linting fixes

* Refactor Secure API logic : Promise based, no wastes of req

* Fix tests

* Add try 'intitial' token

--- a/js/src/views/WriteContract/writeContract.css
+++ b/js/src/views/WriteContract/writeContract.css
@@ -105,6 +105,8 @@
   display: flex;
   flex-direction: column;
   margin-right: 0.5em;
+  overflow: auto;
+
   .panel {
     background-color: rgba(0, 0, 0, 0.5);
     padding: 1em;
