--- a/js/src/ui/Portal/portal.css
+++ b/js/src/ui/Portal/portal.css
@@ -31,24 +31,22 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 80px;
+  height: 100vh;
 
   transform-origin: 100% 0;
-  transition-property: height, width, top, left, background-color, opacity;
-  transition-duration: 0.5s;
+  transition-property: opacity, z-index;
+  transition-duration: 0.25s;
   transition-timing-function: ease-out;
 
-  background-color: rgba(0, 0, 0, 0.0);
+  background-color: rgba(0, 0, 0, 0.85);
   opacity: 0;
-  z-index: 9999;
+  z-index: -10;
 
   * {
     min-width: 0;
   }
 
   &.expanded {
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.85);
     opacity: 1;
     z-index: 9999;
   }
