registry dapp: link accounts to etherscan as well

--- a/js/src/dapps/registry/ui/address.css
+++ b/js/src/dapps/registry/ui/address.css
@@ -26,3 +26,14 @@
   vertical-align: top;
   line-height: 24px;
 }
+
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+.link:hover {
+  text-decoration: underline;
+}
+.link abbr {
+  text-decoration: inherit;
+}
